--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy
 on:
   schedule:
     # - cron: '30 5 1 * *'  # the first day of every month at 5:30 UTC
-    - cron: '30 5 * * *'  # every day at 5:30 UTC
+    - cron: '00 14 21 2 *'  # the 21st day of Feb at 14:00 UTC / 9:00 EST
 
 jobs:
   create_ics:
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+        python setup.py
 
     - name: Build ics files
       run: |
