--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
       run: |
         pip install -r requirements.txt
 
+    - name: Download NLTK Wordnet
+      run: |
+        python setup.py
+
     - name: Build ics files
       run: |
         python pdf_2_ics.py
