update cron schedule

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,11 @@ name: deploy
 
 on:
   schedule:
-    # - cron: '30 5 1 * *'  # the first day of every month at 5:30 UTC
-    - cron: '00 01 22 2 *'  #
+    - cron: '30 5 1 * *'  # the first day of every month at 5:30 UTC
+    - cron: '30 5 2 * *'  # the second day of every month at 5:30 UTC
+    - cron: '30 5 3 * *'  # the third day of every month at 5:30 UTC
+    - cron: '30 5 4 * *'  # the fourth day of every month at 5:30 UTC
+    - cron: '30 5 5 * *'  # the fifth day of every month at 5:30 UTC
 
 jobs:
   create_ics:
