--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,10 @@ jobs:
       run: |
         ./decrypt_secret.sh
         python test_decrypt.py
-        python gcal.py
       env:
         LARGE_SECRET_PASSPHRASE: ${{ secrets.LARGE_SECRET_PASSPHRASE }}
+
+    - name: Post new menus to calendars
+      run: |
+        python gcal.py
+  
