--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,12 @@ jobs:
   create_ics:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out the repository
-      uses: actions/checkout@v4
-      uses: actions/setup-python@v5
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: 3.11.11
         cache: 'pip' # caching pip dependencies
-      run: pip install -r requirements.txt
+    - run: pip install -r requirements.txt
 
     - name: Install dependencies
       run: |
